# InfoBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
docs/: 01-PROJECT_SUMMARY.md  02-ARCHITECTURE.md  03-TECH_STACK.md  04-SETUP.md  05-TROUBLESHOOTING.md  FRAMEWORK_GUIDE.md
notebook/: document.ipynb  pdfloader.ipynb
src/: data_loader.py  embedding.py  logger.py  search.py  vectorstore.py
